@@ -4,7 +4,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\"
-'\" RCS: @(#) $Id: ooInfo.n,v 1.8 2008/09/22 10:47:26 dkf Exp $
+'\" RCS: @(#) $Id: ooInfo.n,v 1.9 2009/05/15 10:14:54 dkf Exp $
 '\"
 .so man.macros
 .TH ooInfo n 0.1 TclOO "TclOO Commands"
@@ -111,6 +111,12 @@ the private (i.e. non-exported) methods of the object (and classes, if
 .
 This subcommand returns a list of all classes that have been mixed into the
 object named \fIobject\fR.
+.TP
+\fBinfo object namespace\fI object\fR
+.VS
+This subcommand returns the name of the internal namespace of the object named
+\fIobject\fR.
+.VE
 .TP
 \fBinfo object variables\fI object\fR
 .VS
